# Brave_New_Commune

./: ALL-AXIOMS.jsonl  ALL-COLAB.jsonl  ALL_KERNELS_20260319.txt  Cargo.toml  Claude's "Smoking_Gun"  README.md  all-diary-logs-data.jsonl  all-message-board-logs-days-1+2  axiom_history.jsonl  axioms  axioms_day_001_t010.json  axioms_day_004_t010.json  axioms_day_005_t010.json  axioms_day_005_t020.json  axioms_day_006_t010.json  board_day_001.jsonl  board_day_002.jsonl  board_day_003.jsonl  board_day_004.jsonl  board_day_005.jsonl  board_day_006.jsonl  bravenewcommune.py  colab_day_001.jsonl  colab_day_002.jsonl  colab_day_003.jsonl  colab_day_004.jsonl  colab_day_005.jsonl  colab_day_006.jsonl  commune.db  commune_rules.jsonl  day_001.jsonl  day_003.jsonl  day_004.jsonl  day_005.jsonl  day_006.jsonl  kernels.jsonl  last-15-kernels  main.rs  message_board_day_001.jsonl  message_board_day_001.txt  (+1 more)
.github/: FUNDING.yml
